# explainability-package

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
docs/: modules.rst
docs/source/: api.rst  conf.py  counterfactuals.rst  index.rst  modules.rst  usage.rst
src/: __init__.py
src/counterfactuals/: BaseExplainer.py  BaseModel.py  Data.py  DiceExplainer.py  Model.py  PytorchModel.py  SklearnModel.py  TensorflowModel.py  __init__.py  constants.py  sklearnModel.py  utils.py
tests/: conftest.py  test_data.py  test_model.py
