[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "explainability-package"
description = "Library with tools for working on explainability"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["explainability", "counterfactuals", "interpretability", "machine learning"]
license = {file = "LICENSE"}
classifiers = [
    "License :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
#Homepage = "https://github.com/"

[project.scripts]


# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/